service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-svc
spec:
  selector:
    run: tickets-app
  type: NodePort # necesario para relacionar con un ingress
  ports:
  - protocol: "TCP"
    # puerto de comunicación del servicio (dentro del cluster)
    port: 5000
    # puerto de comunicación (salida) del pod
    targetPort: 80
    # puerto externo (fuera del cluster) del servicio, rango: 30,000 - 32,767
    nodePort: 32001
