ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tickets-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/subnets: subnet-0c8f35ca5ea30d708, subnet-0e1f9d3cd9752f383
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tickets-svc
              port: # puerto de salida del servicio
                number: 5000
